--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "robotjs": "^0.6.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
+    "sync-request": "^6.1.0",
     "websocket": "^1.0.31"
   }
 }
