--- a/auth_server/package.json
+++ b/auth_server/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "streamlabs_auth_server",
+  "name": "streamlabs-api-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
