--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Milo S. Rue",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "puppeteer": "^3.0.3",
     "request": "^2.88.2",
     "robotjs": "^0.6.0",
